frontend/src/pages/chat/Chat.module.css
.container {
  height: 100vh;
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.chatRoot {
  flex: 1;
  display: flex;
  margin-top: 0px;
  margin-bottom: 20px;
  margin-left: 20px;
  margin-right: 20px;
  gap: 5px;
}

.chatContainer {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  background: #111111;
  overflow-y: auto;
  height: 100vh;
}

.chatEmptyState {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.chatEmptyStateTitle {
  font-style: normal;
  color: white;
  font-weight: 700;
  font-size: 36px;
  display: flex;
  align-items: flex-end;
  text-align: center;
  line-height: 24px;
  margin-top: 36px;
  margin-bottom: 0px;
}

.chatInputBackDrop {
  width: 100%;
  height: 120px;
  background-color: #111111;
  position: sticky;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 5;
}

.chatEmptyStateSubtitle {
  margin-top: 20px;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 150%;
  align-items: flex-end;
  text-align: center;
  letter-spacing: -0.01em;
  color: white;
}

.chatIcon {
  height: 62px;
  width: auto;
}

.chatMessageStream {
  flex-grow: 1;
  max-width: 1028px;
  width: 100%;
  overflow-y: visible;
  word-break: break-all;
  padding-left: 24px;
  padding-right: 24px;
  display: flex;
  flex-direction: column;
  margin-top: 24px;
}

.chatMessageUser {
  display: flex;
  justify-content: flex-end;
  margin-bottom: 12px;
}

.chatLoadingContainer {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 20px;
  gap: 5.42px;
  border: 1px solid #ff4c00;
  border-radius: 18px;
}

.chatMessageUserMessage {
  color: white;
  position: relative;
  display: flex;
  padding: 20px;
  border: 2px solid #333333;
  border-radius: 18px;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 22px;
  order: 0;
  flex-grow: 0;
  overflow-wrap: break-word;
  overflow: hidden;
  word-break: normal;
  white-space: normal;
  max-width: 60%;
}

.chatMessageGpt {
  margin-bottom: 12px;
  max-width: 60%;
  display: flex;
}

.chatMessageError {
  padding: 20px;
  border-radius: 18px;
  color: red;
  border: 1px solid red;
  flex: none;
  order: 0;
  flex-grow: 0;
  max-width: 80%;
  margin-bottom: 12px;
}

.chatMessageErrorContent {
  font-family: 'Segoe UI';
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 22px;
  overflow-wrap: break-word;
  word-break: normal;
  white-space: normal;
  gap: 12px;
  align-items: center;
}

.chatInput {
  position: sticky;
  flex: 0 0 100px;
  padding-top: 12px;
  padding-bottom: 24px;
  padding-left: 24px;
  padding-right: 24px;
  width: 100%;
  max-width: 1028px;
  margin-bottom: 50px;
  margin-top: 8px;
}

.clearChatBroom {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  position: absolute;
  width: 40px;
  height: 40px;
  left: 7px;
  top: 13px;
  color: #ffffff;
  border-radius: 4px;
  z-index: 1;
}

.clearChatBroomNoCosmos {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  position: absolute;
  width: 40px;
  height: 40px;
  left: 7px;
  top: 66px;
  color: #ffffff;
  border-radius: 4px;
  z-index: 1;
}

.newChatIcon {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  position: absolute;
  width: 40px;
  height: 40px;
  left: 7px;
  top: 66px;
  color: #ffffff;
  border-radius: 4px;
  z-index: 1;
}

.stopGeneratingContainer {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 5px 16px;
  gap: 4px;
  position: absolute;
  width: 161px;
  height: 32px;
  left: calc(50% - 161px / 2 + 25.8px);
  bottom: 116px;
  border: 1px solid white;
  border-radius: 16px;
}

.stopGeneratingIcon {
  width: 14px;
  height: 14px;
  color: white;
}

.stopGeneratingText {
  width: 103px;
  height: 20px;
  font-style: normal;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  display: flex;
  align-items: center;
  color: white;
  flex: none;
  order: 0;
  flex-grow: 0;
}

.citationPanel {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 16px 16px;
  gap: 8px;
  background: #ffffff;
  box-shadow:
    0px 2px 4px rgba(0, 0, 0, 0.14),
    0px 0px 2px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  flex: auto;
  order: 0;
  align-self: stretch;
  flex-grow: 0.3;
  max-width: 30%;
  overflow-y: scroll;
  max-height: calc(100vh - 100px);
}

.citationPanelHeaderContainer {
  width: 100%;
}

.citationPanelHeader {
  font-style: normal;
  font-weight: 600;
  font-size: 18px;
  line-height: 24px;
  color: #000000;
  flex: none;
  order: 0;
  flex-grow: 0;
}

.citationPanelDismiss {
  width: 18px;
  height: 18px;
  color: #424242;
}

.citationPanelDismiss:hover {
  background-color: #d1d1d1;
  cursor: pointer;
}

.citationPanelTitle {
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 22px;
  color: #323130;
  margin-top: 12px;
  margin-bottom: 12px;
}

.citationPanelTitle:hover {
  text-decoration: underline;
  cursor: pointer;
}

.citationPanelContent {
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  color: #000000;
  flex: none;
  order: 1;
  align-self: stretch;
  flex-grow: 0;
}

.exectResultList {
  display: flex;
  flex-direction: column;
  gap: 2px;
  border-bottom: 1px solid #ccc;
  margin-top: 12px;
}

.exectResultList:first-child {
  margin-top: 0;
}

.exectResultList:last-child {
  border-bottom: none;
}

.exectResultList > p {
  display: flex;
  flex-direction: row;
  gap: 4px;
  margin: 0;
  margin-bottom: 16px;
}

.exectResultList > span {
  font-weight: 600;
}

a {
  padding-left: 5px;
  padding-right: 5px;
}

.viewSourceButton {
  font-style: normal;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  color: #115ea3;
  flex-direction: row;
  align-items: center;
  padding: 4px 6px;
  gap: 4px;
  border: 1px solid #d1d1d1;
  border-radius: 4px;
}

.viewSourceButton:hover {
  text-decoration: underline;
  cursor: pointer;
}

.uploadedImageChat {
  position: absolute;
  right: -23px;
  bottom: -35px;
  max-width: 70%;
  max-height: 70%;
  border-radius: 4px;
}

@media (max-width: 480px) {
  .chatInput {
    margin-bottom: 0px;
    max-width: 100%;
  }

  .chatMessageUserMessage {
    max-width: 80%;
  }

  .chatMessageGpt {
    max-width: 80%;
  }

  .newChatIcon {
    left: 0px;
  }

  .clearChatBroom {
    left: 0px;
  }

  .clearChatBroomNoCosmos {
    left: 0px;
  }

  .chatEmptyStateTitle {
    color: white;
    line-height: 36px;
  }

  .citationPanel {
    max-width: 100%;
  }
}

